<resources>
    <string name="app_name">Countries</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">login</string>
    <string name="enter_your_login">Enter your login</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="countries">Countries</string>
</resources>